[package]
name = "syncnm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
git2 = "0.18.1"
glob = "0.3.1"
path-clean = "1.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.3"
