[package]
name = "syncnm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
env_logger = "0.11.1"
glob = "0.3.1"
itertools = "0.12.1"
log = "0.4.20"
paste = "1.0.14"
path-clean = "1.0.1"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.31"
serial_test = "3.0.0"
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.3"
tempfile = "3.10.0"
thiserror = "1.0.56"
